<resources>
    <string name="app_name" translatable="false">INHO</string>
    <string name="title_overview">Overview</string>
    <string name="title_water">Water</string>
    <string name="title_temperature">Temperature</string>
    <string name="title_lighting">Lighting</string>
    <string name="title_entrance">Entrance</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_send_msg">Send message</string>
    <string name="caption_controller_name">Management of household:</string>
    <string name="caption_light_control">Lighting</string>
    <string name="caption_blinds_control">Blinds</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_settings">Settings</string>
    <string name="title_about">About app version</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
</resources>
