<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_overview"
        android:icon="@drawable/ic_overview_black_24dp"
        android:title="@string/title_overview" />

    <item
        android:id="@+id/navigation_water"
        android:icon="@drawable/ic_water_black_24dp"
        android:title="@string/title_water" />

    <item
        android:id="@+id/navigation_temperature"
        android:icon="@drawable/ic_temperature_black_24dp"
        android:title="@string/title_temperature" />

    <item
        android:id="@+id/navigation_lighting"
        android:icon="@drawable/ic_lighting_black_24dp"
        android:title="@string/title_lighting" />

    <item
        android:id="@+id/navigation_entrance"
        android:icon="@drawable/ic_entrance_black_24dp"
        android:title="@string/title_entrance" />

</menu>
